--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,5 +40,7 @@ jobs:
         
       # run tests!
       - run: gradle test
+      - run: gradle pmdMain findbugsMain
+      - run: cp -r build/reports/* $CIRCLE_TEST_REPORTS/
 
 
