--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ group 'jp.classmethod'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'pmd'
+apply plugin: 'findbugs'
 
 sourceCompatibility = 1.8
 def springVersion = "4.3.11.RELEASE"
@@ -15,4 +17,11 @@ dependencies {
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+}
+
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+    }
 }
