--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.12'
+    testCompile group: 'org.springframework', name: 'spring-test', version: "${springVersion}"
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
