--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,67 @@
 group 'jp.classmethod'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
-apply plugin: 'pmd'
-apply plugin: 'findbugs'
-
-sourceCompatibility = 1.8
 def springVersion = "4.3.11.RELEASE"
 def springBootVersion = "1.5.9.RELEASE"
-def thymeLeafVersion = "2.1.4.RELEASE"
 
-repositories {
-    mavenCentral()
+allprojects {
+
+    apply plugin: 'java'
+    apply plugin: 'pmd'
+    apply plugin: 'findbugs'
+
+    sourceCompatibility = 1.8
+
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        testCompile 'junit:junit:4.12'
+        testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    }
+
+    tasks.withType(FindBugs) {
+        reports {
+            xml.enabled = false
+            html.enabled = true
+        }
+    }
+
 }
 
-dependencies {
+project(':stateless-csrf-filter-core'){
+    dependencies {
+        compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
+        compile group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"
+        compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
-    compile group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.9.RELEASE'
-
-
-    testCompile 'junit:junit:4.12'
-    testCompile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
-    testCompile group: 'org.springframework', name: 'spring-test', version: "${springVersion}"
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: "${springBootVersion}"
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
+    }
 }
-
-tasks.withType(FindBugs) {
-    reports {
-        xml.enabled = false
-        html.enabled = true
+project(':thymeleaf3'){
+    def thymeLeafVersion = "3.0.9.RELEASE"
+    dependencies {
+        compile project(':stateless-csrf-filter-core')
+        compile group: 'org.thymeleaf', name: 'thymeleaf', version: "${thymeLeafVersion}"
+        compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: "${thymeLeafVersion}"
+    }
+}
+project(':thymeleaf2'){
+    def thymeLeafVersion = "2.1.4.RELEASE"
+    dependencies {
+        compile project(':stateless-csrf-filter-core')
+        compile group: 'org.thymeleaf', name: 'thymeleaf', version: "${thymeLeafVersion}"
+        compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: "${thymeLeafVersion}"
+    }
+}
+project(':example-thymeleaf3'){
+    dependencies {
+        compile project(":thymeleaf3")
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: "${springBootVersion}"
     }
 }
