--- a/build.gradle
+++ b/build.gradle
@@ -29,28 +29,40 @@ allprojects {
         }
     }
 
+    configurations {
+        providedCompile
+    }
+
+    sourceSets {
+        main.compileClasspath += configurations.providedCompile
+        test.compileClasspath += configurations.providedCompile
+        test.runtimeClasspath += configurations.providedCompile
+    }
+
 }
 
-project(':stateless-csrf-filter-core'){
+project(':stateless-csrf-filter-core') {
     dependencies {
         compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
         compile group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"
-        compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
         compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+        providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
-        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
     }
 }
-project(':thymeleaf3'){
+project(':thymeleaf3') {
     def thymeLeafVersion = "3.0.9.RELEASE"
     dependencies {
         compile project(':stateless-csrf-filter-core')
         compile group: 'org.thymeleaf', name: 'thymeleaf', version: "${thymeLeafVersion}"
         compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: "${thymeLeafVersion}"
+        providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+
+        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
     }
 }
-project(':thymeleaf2'){
+project(':thymeleaf2') {
     def thymeLeafVersion = "2.1.4.RELEASE"
     dependencies {
         compile project(':stateless-csrf-filter-core')
@@ -58,7 +70,7 @@ project(':thymeleaf2'){
         compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: "${thymeLeafVersion}"
     }
 }
-project(':example-thymeleaf3'){
+project(':example-thymeleaf3') {
     dependencies {
         compile project(":thymeleaf3")
         compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
