thymeleaf2 向けのサンプルを追加

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 group 'jp.classmethod'
 version '1.0-SNAPSHOT'
 
-def springVersion = "4.3.11.RELEASE"
-def springBootVersion = "1.5.9.RELEASE"
+def springVersion = "4.2.4.RELEASE"
+def springBootVersion = "1.3.2.RELEASE"
 def thymeLeaf2Version = "2.1.4.RELEASE"
 def thymeLeaf3Version = "3.0.9.RELEASE"
-def servletAPIVersion = "3.1.0'"
+def servletAPIVersion = "3.1.0"
 
 allprojects {
 
@@ -51,6 +51,7 @@ project(':stateless-csrf-filter-core') {
         compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
         providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: "${servletAPIVersion}"
+        testCompile group: 'org.springframework', name: 'spring-mock', version: '2.0.8'
 
     }
 }
@@ -69,12 +70,20 @@ project(':thymeleaf2') {
         compile project(':stateless-csrf-filter-core')
         compile group: 'org.thymeleaf', name: 'thymeleaf', version: "${thymeLeaf2Version}"
         compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: "${thymeLeaf2Version}"
+        providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: "${servletAPIVersion}"
     }
 }
 project(':example-thymeleaf3') {
     dependencies {
         compile project(":thymeleaf3")
         compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.3.0'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: "${springBootVersion}"
+    }
+}
+project(':example-thymeleaf2') {
+    dependencies {
+        compile project(":thymeleaf2")
         compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
         compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: "${springBootVersion}"
     }
