--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'spring-stateless-csrf-filter'
-include 'stateless-csrf-filter-core', 'thymeleaf2', 'thymeleaf3', 'example-thymeleaf3'
+include 'stateless-csrf-filter-core', 'thymeleaf2', 'thymeleaf3', 'example-thymeleaf3', 'example-thymeleaf2'
 
