--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,8 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
       # run tests!
       - run: gradle test
-      - run: gradle pmdMain findbugsMain
+      - run: gradle pmdMain findbugsMain codeCoverageReport
+      - run: bash <(curl -s https://codecov.io/bash)
       - store_test_results:
           path: ~/repo/build/reports/findbugs/
       - store_artifacts:
@@ -41,3 +42,7 @@ jobs:
           path: ~/repo/build/reports/pmd/
       - store_artifacts:
           path: ~/repo/build/reports/pmd/
+      - store_artifacts:
+          path: ~/repo/build/reports/jacoco/
+      - store_test_results:
+          path: ~/repo/build/reports/jacoco/
