--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,9 @@ project(':thymeleaf2') {
         compile group: 'org.thymeleaf', name: 'thymeleaf', version: "${thymeLeaf2Version}"
         compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: "${thymeLeaf2Version}"
         providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: "${servletAPIVersion}"
+        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBoot1Version}"
+        testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+        testCompile group: 'org.thymeleaf', name: 'thymeleaf-testing', version: "2.1.4.RELEASE"
     }
 }
 project(':example-thymeleaf3') {
