--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
       # run tests!
       - run: gradle test
-      - run: gradle pmdMain findbugsMain codeCoverageReport
+      - run: gradle pmdMain spotbugsMain codeCoverageReport
       - run: bash <(curl -s https://codecov.io/bash)
       - store_test_results:
           path: ~/repo/build/reports/findbugs/
